--- a/src/main/resources/ro/netvoip/voteapp/VoteApp-view.fxml
+++ b/src/main/resources/ro/netvoip/voteapp/VoteApp-view.fxml
@@ -6,6 +6,9 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ro.netvoip.voteapp.VoteAppController">
    <center>
-      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+      <ImageView fx:id="control2" fitHeight="150.0" fitWidth="200.0" onKeyPressed="#initialize" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
    </center>
+   <top>
+      <ImageView fx:id="control1" fitHeight="150.0" fitWidth="200.0" onKeyPressed="#initialize" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+   </top>
 </BorderPane>
