--- a/src/main/resources/ro/netvoip/voteapp/VoteApp-view.fxml
+++ b/src/main/resources/ro/netvoip/voteapp/VoteApp-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="935.0" prefWidth="1001.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ro.netvoip.voteapp.VoteAppController">
+<Pane prefHeight="956.0" prefWidth="1001.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ro.netvoip.voteapp.VoteAppController">
    <children>
       <GridPane gridLinesVisible="true" layoutX="1.0" layoutY="68.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0">
         <columnConstraints>
@@ -140,5 +141,6 @@
             <Font name="Apple Braille Outline 6 Dot" size="30.0" />
          </font>
       </Label>
+      <Button fx:id="nextButton" layoutX="778.0" layoutY="879.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="193.0" text="Next/display" />
    </children>
 </Pane>
