Made lots of changes: - added the option to discard a vote - added the option to go back to a previous voter, if there are multiple - added the option to not let a voter vote twice the same candidate - also added an error alert for the previous - in the Results.fxml I implemented the exit button which quits the application

--- a/src/main/resources/ro/netvoip/voteapp/VoteApp-view.fxml
+++ b/src/main/resources/ro/netvoip/voteapp/VoteApp-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="956.0" prefWidth="1001.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ro.netvoip.voteapp.VoteAppController">
+<Pane fx:id="rootPane" prefHeight="995.0" prefWidth="1006.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ro.netvoip.voteapp.VoteAppController">
    <children>
       <GridPane gridLinesVisible="true" layoutX="1.0" layoutY="68.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0">
         <columnConstraints>
@@ -141,6 +142,9 @@
             <Font name="Apple Braille Outline 6 Dot" size="30.0" />
          </font>
       </Label>
-      <Button fx:id="nextButton" layoutX="778.0" layoutY="879.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="193.0" text="Next/display" />
+      <Button fx:id="nextButton" layoutX="799.0" layoutY="910.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="193.0" text="Next/display" />
+      <ListView fx:id="userVotesListView" layoutX="-2.0" layoutY="868.0" prefHeight="127.0" prefWidth="695.0" />
+      <Button fx:id="discardVoteButton" layoutX="693.0" layoutY="884.0" mnemonicParsing="false" onAction="#handleDiscardVote" prefHeight="26.0" prefWidth="97.0" text="Discard vote" />
+      <Button fx:id="previousButton" layoutX="890.0" layoutY="1.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="115.0" text="Previous voter" />
    </children>
 </Pane>
