--- a/src/main/resources/ro/netvoip/voteapp/Results.fxml
+++ b/src/main/resources/ro/netvoip/voteapp/Results.fxml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.Pane?>
 
 
-<ListView fx:id="votersListView" prefHeight="451.0" prefWidth="422.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ro.netvoip.voteapp.ResultsController" />
+<Pane prefHeight="802.0" prefWidth="740.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ro.netvoip.voteapp.ResultsController">
+   <children>
+      <ListView fx:id="votersListView" layoutX="14.0" layoutY="109.0" prefHeight="575.0" prefWidth="710.0" />
+      <Button fx:id="exitButton" layoutX="386.0" layoutY="703.0" mnemonicParsing="false" onAction="#handleExitButton" prefHeight="82.0" prefWidth="230.0" text="Exit" />
+   </children>
+</Pane>
